# url-memories

./: Cargo.toml  PKGBUILD  README.org  url-memories.desktop
resources/: window.ui
src/: main.rs
